--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using RentACar.WebUI
 @using RentACar.WebUI.Models
+@using RentACar.Dto.TestimonialDtos
+@using RentACar.Dto.AboutDtos
+@using RentACar.Dto.ServiceDtos
+@using RentACar.Dto.CarDtos
+@using RentACar.Dto.FooterAddressDtos
+@using RentACar.Dto.ContactDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
