--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using RentACar.Dto.CarDtos
 @using RentACar.Dto.FooterAddressDtos
 @using RentACar.Dto.ContactDtos
+@using RentACar.Dto.BannerDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
