--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using RentACar.Dto.FooterAddressDtos
 @using RentACar.Dto.ContactDtos
 @using RentACar.Dto.BannerDtos
+@using RentACar.Dto.BlogDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
