--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using RentACar.Dto.ContactDtos
 @using RentACar.Dto.BannerDtos
 @using RentACar.Dto.BlogDtos
+@using RentACar.Dto.CarPricingDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
