--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -9,4 +9,5 @@
 @using RentACar.Dto.BannerDtos
 @using RentACar.Dto.BlogDtos
 @using RentACar.Dto.CarPricingDtos
+@using RentACar.Dto.CategoryDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
