--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/AdminCar/Index.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/AdminCar/Index.cshtml
@@ -43,8 +43,10 @@
                                             <td>@item.km</td>
                                             <td>
                                                 <a href="/Admin/AdminCar/RemoveCar/@item.carID" class="btn btn-outline-danger">Sil</a>
-                                                <a href="/AdminCar/UpdateCar/@item.carID" class="btn btn-outline-success">Güncelle</a>
-                                                <a href="/Admin/CarList/CarDetail/@item.carID" class="btn btn-outline-warning">Sitede Gör</a>
+                                                <a href="/Admin/AdminCar/UpdateCar/@item.carID" class="btn btn-outline-success">Güncelle</a>
+                                                <a href="/Admin/CarList/CarDetail/@item.carID" class="btn btn-outline-dark">Detaylar</a>
+                                                <a href="/CarList/CarDetail/@item.carID" class="btn btn-outline-warning">Sitede Gör</a>
+                                                <a href="/CarList/CarDetail/@item.carID" class="btn btn-outline-secondary">Fiyat Bilgileri</a>
                                             </td>
                                         </tr>
 
