--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,4 +13,5 @@
 @using RentACar.Dto.AuthorDtos
 @using RentACar.Dto.CarDtos
 @using RentACar.Dto.BrandDtos
+@using RentACar.Dto.FeatureDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
