--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -14,4 +14,7 @@
 @using RentACar.Dto.CarDtos
 @using RentACar.Dto.BrandDtos
 @using RentACar.Dto.FeatureDtos
+@using RentACar.Dto.CommentDtos
+@using RentACar.Dto.PricingDtos
+@using RentACar.Dto.LocationDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
