--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -17,4 +17,5 @@
 @using RentACar.Dto.CommentDtos
 @using RentACar.Dto.PricingDtos
 @using RentACar.Dto.LocationDtos
+@using RentACar.Dto.SocialMediaDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
