--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -13,4 +13,5 @@
 @using RentACar.Dto.TagCloudDtos
 @using RentACar.Dto.AuthorDtos
 @using RentACar.Dto.CarDtos
+@using RentACar.Dto.RentACarDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
