--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -14,4 +14,5 @@
 @using RentACar.Dto.AuthorDtos
 @using RentACar.Dto.CarDtos
 @using RentACar.Dto.RentACarDtos
+@using RentACar.Dto.ReservationDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
