--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -18,4 +18,5 @@
 @using RentACar.Dto.PricingDtos
 @using RentACar.Dto.LocationDtos
 @using RentACar.Dto.SocialMediaDtos
+@using RentACar.Dto.CarFeatureDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
