--- a/Frontends/RentACar.WebUI/Views/Shared/Components/_AddCommentComponentPartial/Default.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Shared/Components/_AddCommentComponentPartial/Default.cshtml
@@ -2,7 +2,7 @@
     <h3 class="mb-5">Bir Yorum Yapın</h3>
     <form action="#" class="p-5 bg-light">
         <div class="form-group">
-            <label for="name">Name *</label>
+            <label for="name">Adınız Soyadınız *</label>
             <input type="text" class="form-control" id="name">
         </div>
         <div class="form-group">
