--- a/Frontends/RentACar.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
@@ -8,9 +8,9 @@
     @await Component.InvokeAsync("_BlogDetailAuthorAboutComponentPartial", new { id = ViewBag.blogid })
 
     <div class="pt-5 mt-5">
-        <h3 class="mb-5">Yorumlar</h3>
-        @await Component.InvokeAsync("_CommentListByBlogComponentPartial")
-        @await Component.InvokeAsync("_AddCommentComponentPartial")
-@*         @await Html.PartialAsync("~/Views/Blog/AddComment.cshtml")
- *@    </div>
+        <h3 class="mb-5">@ViewBag.commentCount Yorum</h3>
+        @await Component.InvokeAsync("_CommentListByBlogComponentPartial", new { id = ViewBag.blogid })
+@*         @await Component.InvokeAsync("_AddCommentComponentPartial")
+        *@        @await Html.PartialAsync("~/Views/Blog/AddComment.cshtml", new { id = ViewBag.blogid })
+    </div>
 </div>
