--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -15,4 +15,5 @@
 @using RentACar.Dto.CarDtos
 @using RentACar.Dto.RentACarDtos
 @using RentACar.Dto.ReservationDtos
+@using RentACar.Dto.CommentDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
