--- a/Frontends/RentACar.WebUI/Views/Car/Index.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Car/Index.cshtml
@@ -8,7 +8,7 @@
 <section class="ftco-section bg-light">
     <div class="container">
         <div class="row">
-            @foreach(var item in Model)
+            @foreach (var item in Model)
             {
                 <div class="col-md-4">
                     <div class="car-wrap rounded ftco-animate">
@@ -20,12 +20,31 @@
                                 <span class="cat">@item.Brand</span>
                                 <p class="price ml-auto">@item.Amount <span>/Günlük</span></p>
                             </div>
-                            <p class="d-flex mb-0 d-block"><a href="/Reservation/Index/@item.CarId" class="btn btn-primary py-2 mr-1">Hemen Kirala</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Detaylar</a></p>
+                            <p class="d-flex mb-0 d-block">
+                                <a href="/Reservation/Index/@item.CarId" class="btn btn-primary py-2 mr-1">Hemen Kirala</a>
+                                <a href="#" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#Modal1-@item.CarId">Detaylar</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal" tabindex="-1" id="Modal1-@item.CarId">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Araç Detayları</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                @await Component.InvokeAsync("_CarDetailMainCarFeatureComponentPartial", new { id = item.CarId }) 
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             }
-            
         </div>
     </div>
 </section>
