--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -16,4 +16,6 @@
 @using RentACar.Dto.RentACarDtos
 @using RentACar.Dto.ReservationDtos
 @using RentACar.Dto.CommentDtos
+@using RentACar.Dto.CarFeatureDtos
+@using RentACar.Dto.ReviewDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
