--- a/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Views/_ViewImports.cshtml
@@ -12,10 +12,11 @@
 @using RentACar.Dto.CategoryDtos
 @using RentACar.Dto.TagCloudDtos
 @using RentACar.Dto.AuthorDtos
-@using RentACar.Dto.CarDtos
 @using RentACar.Dto.RentACarDtos
 @using RentACar.Dto.ReservationDtos
 @using RentACar.Dto.CommentDtos
 @using RentACar.Dto.CarFeatureDtos
 @using RentACar.Dto.ReviewDtos
+@using RentACar.Dto.RegisterDtos
+@using RentACar.Dto.LoginDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
