--- a/Frontends/RentACar.WebUI/Views/Shared/Components/_DefaultLast5CarsWithBrandComponentPartial/Default.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Shared/Components/_DefaultLast5CarsWithBrandComponentPartial/Default.cshtml
@@ -22,7 +22,7 @@
 										<span class="cat">@item.brandName</span>
 										<p class="price ml-auto">1200 TL <span>/günlük</span></p>
 									</div>
-									<p class="d-flex mb-0 d-block"><a href="#" class="btn btn-primary py-2 mr-1">Hemen Kirala</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
+									<p class="d-flex mb-0 d-block"><a href="/Reservation/Index/@item.carID" class="btn btn-primary py-2 mr-1">Hemen Kirala</a> <a href="#" class="btn btn-secondary py-2 ml-1">Details</a></p>
 								</div>
 							</div>
 						</div>
