--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
@@ -22,13 +22,6 @@
                                    # @ViewBag.v
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.v1 % <i class="mdi mdi-arrow-up"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 5px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.v1%;"></div>
                         </div>
                     </div>
                 </div>
@@ -47,13 +40,6 @@
                                     # @ViewBag.locationCount
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.locationCountRandom% <i class="mdi mdi-arrow-down"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.locationCountRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -72,13 +58,6 @@
                                    # @ViewBag.authorCount
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.authorCountRandom% <i class="mdi mdi-arrow-up"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.authorCountRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -97,13 +76,6 @@
                                     # @ViewBag.blogCount
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.blogCountRandom% <i class="mdi mdi-arrow-down"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.blogCountRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -126,13 +98,6 @@
                                     # @ViewBag.brandCount
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.brandCountRandom% <i class="mdi mdi-arrow-up"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 5px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.brandCountRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -151,13 +116,6 @@
                                     @ViewBag.avgRentPriceForDaily ₺
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.avgRentPriceForDailyRandom% <i class="mdi mdi-arrow-down"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForDailyRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -176,13 +134,6 @@
                                     @ViewBag.avgRentPriceForWeekly ₺
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.avgRentPriceForWeeklyRandom% <i class="mdi mdi-arrow-up"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForWeeklyRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -201,13 +152,6 @@
                                     @ViewBag.avgRentPriceForMonthly ₺
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.avgRentPriceForMonthlyRandom% <i class="mdi mdi-arrow-down"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForMonthlyRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -230,13 +174,6 @@
                                    # @ViewBag.carCountByTranmissionIsAuto
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.carCountByTranmissionIsAutoRandom% <i class="mdi mdi-arrow-up"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 5px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.carCountByTranmissionIsAutoRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -255,13 +192,6 @@
                                     @ViewBag.brandNameByMaxCar
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.brandNameByMaxCarRandom% <i class="mdi mdi-arrow-down"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @@ViewBag.brandNameByMaxCarRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -280,13 +210,6 @@
                                     @ViewBag.blogTitleByMaxBlogComment
                                 </h3>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.blogTitleByMaxBlogCommentRandom% <i class="mdi mdi-arrow-up"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.blogTitleByMaxBlogCommentRandom%;"></div>
                         </div>
                     </div>
                 </div>
@@ -305,13 +228,6 @@
                                    # @ViewBag.carCountByKmSmallerThen1000
                                 </h2>
                             </div>
-                            <div class="col-4 text-right">
-                                <span class="text-white-50">@ViewBag.carCountByKmSmallerThen1000Random% <i class="mdi mdi-arrow-down"></i></span>
-                            </div>
-                        </div>
-
-                        <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                            <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.carCountByKmSmallerThen1000Random%;"></div>
                         </div>
                     </div>
                 </div>
@@ -351,7 +267,7 @@
                     <div class="card-body">
                         <div class="mb-4">
                             <span class="badge badge-soft-light float-right">Yakıt Türü</span>
-                            <h5 class="card-title mb-0 text-white">Elektrikli Araç</h5>
+                            <h5 class="card-title mb-0 text-white">Hibrit Araç</h5>
                         </div>
                         <div class="row d-flex align-items-center mb-4">
                             <div class="col-8">
