--- a/Frontends/RentACar.WebUI/Views/Shared/Components/_DefaultStatisticsComponentPartial/Default.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Shared/Components/_DefaultStatisticsComponentPartial/Default.cshtml
@@ -30,7 +30,7 @@
                 <div class="block-18">
                     <div class="text d-flex align-items-center">
                         <strong class="number" data-number="@ViewBag.carCountByFuelElectric">0</strong>
-                        <span>Elektrikli Araç</span>
+                        <span>Hibrit Araç</span>
                     </div>
                 </div>
             </div>
