--- a/Frontends/RentACar.WebUI/Views/Shared/Components/_CarDetailCommentsByCarIdComponentPartial/Default.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Shared/Components/_CarDetailCommentsByCarIdComponentPartial/Default.cshtml
@@ -3,25 +3,14 @@
 <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
 	<div class="row">
 		<div class="col-md-7">
-			<h3 class="head">24 Değerlendirme</h3>
 			@foreach(var item in Model)
 			{
 			<div class="review d-flex">
 				<div class="desc">
 					<h4>
-						<span class="text-left">@item.CustomerName</span>
+						<span class="text-left" style="color:aquamarine">@item.CustomerName</span>
 						<span class="text-right">@item.ReviewDate.ToShortDateString()</span>
 					</h4>
-					<p class="star">
-						<span>
-							<i class="ion-ios-star"></i>
-							<i class="ion-ios-star"></i>
-							<i class="ion-ios-star"></i>
-							<i class="ion-ios-star"></i>
-							<i class="ion-ios-star"></i>
-						</span>
-						<span class="text-right"><a href="#" class="reply"><i class="icon-reply"></i></a></span>
-					</p>
 					<p>@item.Comment</p>
 				</div>
 			</div>
