--- a/Frontends/RentACar.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/RentACar.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -13,6 +13,11 @@
                 <li class="nav-item"><a href="/Car/Index/" class="nav-link">Arabalar</a></li>
                 <li class="nav-item"><a href="/Blog/Index/" class="nav-link">Bloglar</a></li>
                 <li class="nav-item"><a href="/Contact/Index/" class="nav-link">İletişim</a></li>
+                <li class="nav-item"><a href="/Login/Index/" class="nav-link" style="font-weight:bold; color:darkblue">Giriş Yap</a></li>
+                <form action="/Login/Logout" method="post">
+                    <button type="submit" class="nav-link btn btn-link" style="font-weight:bold; color:crimson">Çıkış Yap</button>
+                </form>
+
             </ul>
         </div>
     </div>
