--- a/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/RentACar.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -19,4 +19,5 @@
 @using RentACar.Dto.LocationDtos
 @using RentACar.Dto.SocialMediaDtos
 @using RentACar.Dto.CarFeatureDtos
+@using RentACar.Dto.ReservationDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
