--- a/Frontends/RentACar.WebUI/Views/AdminLayout/AdminNavbarPartial.cshtml
+++ b/Frontends/RentACar.WebUI/Views/AdminLayout/AdminNavbarPartial.cshtml
@@ -15,12 +15,12 @@
                 <div class="dropdown-menu">
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <a href="/Admin/AdminCar/CreateCar/" class="dropdown-item notify-item">
                         Yeni Araç Girişi
                     </a>
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <a href="/Admin/AdminBrand/CreateBrand/" class="dropdown-item notify-item">
                         Yeni Marka Girişi
                     </a>
 
@@ -30,7 +30,7 @@
                     </a>
 
                     <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
+                    <a href="/Default/Index/" class="dropdown-item notify-item">
                         Siteye Git
                     </a>
                 </div>
@@ -60,41 +60,6 @@
                 </div>
             </div>
 
-            <div class="dropdown d-inline-block">
-                <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="" src="~/vertical/assets/images/flags/us.jpg" alt="Header Language" height="16">
-                    <span class="d-none d-sm-inline-block ml-1">İngilizce</span>
-                    <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right">
-
-                    <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="~/vertical/assets/images/flags/spain.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">İspanyolca</span>
-                    </a>
-
-                    <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="~/vertical/assets/images/flags/germany.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Almanca</span>
-                    </a>
-
-                    <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="~/vertical/assets/images/flags/italy.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">İtalyanca</span>
-                    </a>
-
-                    <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="~/vertical/assets/images/flags/russia.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Rusça</span>
-                    </a>
-
-                    <!-- item-->
-                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                        <img src="~/vertical/assets/images/flags/turkey.png" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Türkçe</span>
-                    </a>
-                </div>
-            </div>
 
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item noti-icon" id="page-header-notifications-dropdown"
